# Game

./: CONTROLS.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  liner.py  run.rs  rust-toolchain.toml
crates/game_client/: Cargo.toml  README.md
crates/game_client/src/: main.rs
crates/game_core/: Cargo.toml  README.md  README_game_core.md
crates/game_core/crates/game_objects/: Cargo.toml  DELTA_SYSTEM.md  README_aoi_system.md  README_delta_system.md  README_game_objects.md  README_ids_handles_system.md  README_knowledge_system.md  README_playerview_system.md  arena_system.md  ids_handles.md  threading_system.md
crates/game_core/crates/game_objects/crates/humanoids/: humanoid.rs
crates/game_core/crates/game_objects/src/: blocks.rs  camera.rs  celestials.rs  chunks.rs  delta_examples.rs  entities.rs  factions.rs  grids.rs  handle.rs  humanoids.rs  ids.rs  inventory.rs  items.rs  lib.rs  mapping.rs  objects.rs  physics.rs  player_celestial_delta_examples.rs  players.rs  validation.rs  volume.rs  world.rs
crates/game_core/crates/game_objects/src/blocks/: armor.rs  assets.rs  blocks.rs  cockpits.rs  mod.rs  power.rs  production.rs  thrusters.rs  utility.rs  weapons.rs
crates/game_core/crates/game_objects/src/camera/: camera.rs
crates/game_core/crates/game_objects/src/celestials/: celestials.rs  mod.rs
crates/game_core/crates/game_objects/src/entities/: entities.rs
crates/game_core/crates/game_objects/src/factions/: factions.rs  mod.rs
crates/game_core/crates/game_objects/src/grids/: grids.rs  mod.rs
crates/game_core/crates/game_objects/src/humanoids/: humanoids.rs  mod.rs
crates/game_core/crates/game_objects/src/inventory/: inventory.rs
crates/game_core/crates/game_objects/src/items/: items.rs
crates/game_core/crates/game_objects/src/logics/: logics.rs  mod.rs  objects.rs
crates/game_core/crates/game_objects/src/physics/: metrics.rs  (+4 more)
crates/game_core/crates/game_protocol/: Cargo.toml  README.md  README_game_protocol.md
crates/game_core/crates/game_protocol/src/: lib.rs
crates/game_core/crates/game_utils/: Cargo.toml  README_arena_system.md  README_game_utils.md  README_threading_system.md
crates/game_core/crates/game_utils/src/: arena.rs  lib.rs  threading.rs
crates/game_core/crates/game_world/: Cargo.toml
crates/game_core/crates/game_world/src/: lib.rs  world.rs
crates/game_core/examples/: demo.rs
crates/game_core/src/: lib.rs
crates/game_protocol/: Cargo.toml
crates/game_protocol/examples/: demo.rs
crates/game_protocol/src/: lib.rs
crates/render_wgpu/: Cargo.toml
crates/render_wgpu/assets/: shader.wgsl
crates/render_wgpu/src/: buffer_pool.rs  camera_settings.rs  chunk_renderer.rs  framegraph.rs  frustum.rs  hot_reload.rs  lib.rs  mesh_upload.rs  occlusion_culler.rs  pipeline.rs  render.rs  resize.rs  texture.rs
crates/render_wgpu/src/gfx/: mod.rs
(+99 files in other folders)
