[package]
name = "game-client"
version = "0.1.0"
edition = "2021"

[dependencies]
game-core = { path = "../game_core" }
game-renderer = { path = "../game_renderer" }
winit = "0.30"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
wgpu = "27.0.1"
pollster = "0.4.0"
glam = "0.30"
