[package]
name = "game-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
game-core = { path = "../game_core" }
anyhow = "1.0"
tracing = "0.1"
futures-util = "0.3"