[package]
name = "render_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png","jpeg"] }
glam = "0.27"
egui = "0.29.1"
egui-winit = "0.29.1"   # brings winit 0.30.x
egui-wgpu = "0.29.1"    # brings matching wgpu
math_util = { path = "../math_util" }
